[CP2-2198] Accessibility issue - 9.Ensure text and images of text provide sufficient contrast

--- a/apps/admin/src/Less/theme.less
+++ b/apps/admin/src/Less/theme.less
@@ -44,6 +44,7 @@
 @breadcrumb-separator-color: black;
 @breadcrumb-last-item-color: black;
 @breadcrumb-separator-margin: 5px;
+@input-placeholder-color: #696969;
 
 // Site layout
 .site-layout-background {
